Mon Dec 20 00:41:04 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/catman.c (main): Initialise locale using the LC_MESSAGES
	  category rather than LC_ALL.  glibc returns a composite name for
	  the latter.
	* lib/util.c (init_locale): Return void instead of returning the
	  result of setlocale.
	* include/manconfig.h.in (init_locale): Update prototype.

Sun Dec 19 16:10:35 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import idpriv-drop and idpriv-droptemp modules.
	* configure.ac: Stop checking for seteuid, setreuid, and setresuid.
	* lib/security.c (POSIX_SAVED_IDS, SET_EUID, SWAP_UIDS): Remove in
	  favour of idpriv.h.
	  (drop_effective_privs): Use idpriv_temp_drop.
	  (regain_effective_privs): Use idpriv_temp_restore.
	  (do_system_drop_privs): Use idpriv_drop.  Drop saved-IDs case;
	  avoiding a fork doesn't justify having two code paths.

Sun Dec  5 20:58:10 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Provide byte positions in manconv errors (Debian bug #562789).

	* src/manconv.c (locate_error): New function.
	  (try_iconv): Skip over processed input data after handling errors.
	  Use locate_error to produce exact byte positions for conversion
	  errors.

Thu Dec  2 23:54:03 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Allow passing multiple sections to whatis and apropos (Debian bug
	#571285).

	* src/whatis.c (options): Allow spelling --section as --sections;
	  this is now the preferred long spelling.  Document that the
	  argument may be colon-separated.
	  (split_sections): New function.
	  (parse_opt): Pass -s argument through split_sections.
	  (do_whatis): Move most logic to ...
	  (do_whatis_section): ... here.
	  (do_whatis): Iterate over sections, calling do_whatis_section for
	  each.
	  (do_apropos): Test all requested sections.
	* man/man1/apropos.man1 (SYNOPSIS, OPTIONS), man/man1/whatis.man1
	  (SYNOPSIS, OPTIONS): Document new semantics.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.